Closed Bug 728818 Opened 12 years ago Closed 12 years ago

IM: Trampoline access invalid parameters on Win64

Categories

(Core :: JavaScript Engine, defect)

x86_64
Windows Vista
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: m_kato, Unassigned)

Details

Attachments

(1 file)

Attached patch fixSplinter Review
      No description provided.
Attachment #598795 - Flags: review?(dvander)
Hardware: x86 → x86_64
Summary: IM: Tranpoline access invalid parameters on Win64 → IM: Trampoline access invalid parameters on Win64
Attachment #598795 - Flags: review?(dvander) → review+
https://hg.mozilla.org/projects/ionmonkey/rev/0dfd83ea51fc
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: