Bug 728818 - IM: Trampoline access invalid parameters on Win64. r=dvander